# streambench

./: .gitmodules  LICENSE  README.md  e2e.gp  run.sh  scale.gp  scale32.csv  setup.sh
data/taxi/: conv.py  fare.csv  trip.csv
dataset_parser/: CMakeLists.txt  parser.cpp
dataset_util/: README.md
dataset_util/include/: csv_parser.h  data_gen.h  data_loader.h  data_parser.h  data_printer.h  taxi_data.h  taxi_data_parser.h  util.h  vibration_data_parser.h
dataset_util/include/taxi/: taxi_data_gen.h  taxi_data_print.h
dataset_util/loader/cpp/: CMakeLists.txt  loader.cpp
dataset_util/loader/csharp/: loader.sln
dataset_util/loader/csharp/loader/: Program.cs  loader.csproj
dataset_util/loader/java/: TaxiFareLoader.java  TaxiTripLoader.java
dataset_util/parser/: CMakeLists.txt  parser.cpp
dataset_util/protos/: stream_event.proto  taxi.proto  taxi_trip.proto  vibration.proto
flink_bench/: pom.xml
flink_bench/src/: Bench.java
flink_bench/src/main/java/org/streambench/: Bench.java  Transform.java  Utility.java
grizzly_bench/: CMakeLists.txt  Dockerfile  bench.cpp  run.sh  setup.sh
grizzly_bench/cmake/: macros.cmake
grizzly_bench/data-generator/: dataGenerator.cpp  yahooDataGenerator.cpp
lightsaber2_bench/: Dockerfile  run.sh  setup.sh
lightsaber_bench/: CMakeLists.txt  Dockerfile  README.md  main.cpp  run.sh
lightsaber_bench/include/: ls_aggregate.h  ls_alterdur.h  ls_base.h  ls_select.h  ls_where.h  ls_yahoo.h
lightsaber_bench/remote/: remoteSink.cpp
spark_bench/: pom.xml
spark_bench/src/main/java/org/streambench/: App.java  TestReceiver.java
spark_bench/src/test/java/org/streambench/: AppTest.java
streambox_bench/: CMakeLists.txt  Dockerfile  main.cpp  run.sh  setup.sh
streambox_bench/include/: sb_aggregate.h  sb_bench.h  sb_join.h  sb_select.h  sb_where.h  sb_yahoo.h
streambox_bench/include/streambench/Mapper/: FilterMapper.h  FilterMapperEvaluator.h  ProjectMapper.h  ProjectMapperEvaluator.h  TemporalKVMapper.h  TemporalKVMapperEvaluator.h  TemporalWinMapper.h  TemporalWinMapperEvaluator.h
streambox_bench/include/streambench/Source/: BoundedInMem.h  BoundedInMemEvaluator.h
streambox_bench/include/streambench/WinSum/: WinCount.h  WinSum_addfloat.h
streambox_bench/src/Mapper/: FilterMapper.cpp  ProjectMapper.cpp  TemporalKVMapper.cpp  TemporalWinMapper.cpp
streambox_bench/src/Source/: BoundedInMem.cpp
streambox_bench/src/WinSum/: WinCount.cpp  WinSum_addfloat.cpp
streamjit_bench/: build.xml
streamjit_bench/src/edu/mit/streamjit/test/apps/: MicroBench.java
streamjit_bench/src/edu/mit/streamjit/test/apps/fmradio/: FMRadio.java
streamjit_bench/src/edu/mit/streamjit/util/: SneakyThrows.java
streamjit_bench/src/edu/mit/streamjit/util/bytecode/types/: FieldType.java
streamql_bench/: bench.java
tilt_bench/: CMakeLists.txt  Dockerfile  main.cpp  run.sh  setup.sh
tilt_bench/include/: tilt_aggregate.h  tilt_alterdur.h  tilt_base.h  tilt_bench.h  tilt_eg.h  tilt_impute.h  tilt_innerjoin.h  tilt_kurt.h  tilt_ma.h  tilt_norm.h  tilt_outerjoin.h  tilt_peak.h  tilt_qty.h  tilt_resample.h  tilt_rsi.h  tilt_select.h  tilt_taxi.h  tilt_where.h  tilt_yahoo.h
trill_bench/: .gitignore  Dockerfile  run.sh  setup.sh  trill_bench.sln
trill_bench/bench/: BandPassFilterAgg.cs  BenchUtil.cs  Dataset.cs  DatasetData.cs  Program.cs  TaxiData.cs  TestData.cs  Transform.cs  YahooData.cs  ZScoreAgg.cs  bench.csproj
